# RL-Snake

./: .gitignore  README.md  config.py  dqn_agent copy.ipynb  dqn_agent.ipynb  main.py  play.py  pyproject.toml  train.py
agents/: __init__.py  dqn_agent.ipynb  dqn_agent.py  dqn_agent_opt.py  ppo_agent.ipynb  ppo_agent.py  q_learning_agent.py  tabular_agent.ipynb
core/: factory.py  interfaces.py
docs/: deep_q_network.md  dqn_cnn.md  mdp.md  ppo.md  tabular_q_learning.md
game/: config.py  engine.py  entities.py
ui/: __init__.py  pygame_view.py  terminal_view.py
utils/: agent_loaders.py  agent_utils.py  dqn_play_agent.py  metrics.py
